# ara

./: .pre-commit-config.yaml  Cargo.toml  bacon.toml  rustfmt.toml
crates/ara_hangul/: Cargo.toml
crates/ara_hangul/src/: lib.rs
crates/ara_hangul/tests/: test.rs
