[workspace]
members = ["crates/*"]

[workspace.package]
authors = ["Abiria <abiria.dev@gmail.com>"]
edition = "2021"
description = "Fast yet modern hangul processing library, written in Rust."
readme = "README.md"
repository = "https://github.com/abiriadev/ara"
license = "Apache-2.0"
keywords = ["hangul", "hangeul", "unicode", "korean", "text"]
categories = ["text-processing", "localization"]
