[package]
	authors.workspace     = true
	categories.workspace  = true
	description.workspace = true
	edition.workspace     = true
	keywords.workspace    = true
	license.workspace     = true
	name                  = "ara_hangul"
	readme.workspace      = true
	repository.workspace  = true
	version               = "0.1.0"

[dependencies]
